syntax = "proto3";

package messagestorage;

option java_multiple_files = true;
option java_package = "org.example.messagestorage.grpc";
option java_outer_classname = "MessageStorageProto";

// -------- CHAT SERVICE ------------
service MessageStorageService {

  rpc CreateChat(CreateChatRequest) returns (CreateChatResponse);

  rpc GetChatsForUser(GetChatsRequest) returns (GetChatsResponse);

  rpc GetChatMessages(GetMessagesRequest) returns (GetMessagesResponse);

  rpc SaveMessage(SaveMessageRequest) returns (SaveMessageResponse);
}

// ---------- MESSAGES --------------

message MessageBody {
  string type = 1;
  string text = 2;
}

message SaveMessageRequest {
  string chatId = 1;
  string fromUserId = 2;
  repeated string toUserIds = 3;
  MessageBody body = 4;
}

message SaveMessageResponse {
  string messageId = 1;
  string createdAt = 2;
}

// ----------- CHATS ----------------

message CreateChatRequest {
  repeated string userIds = 1;
  string title = 2;
  string type = 3; // private / group
}

message CreateChatResponse {
  string chatId = 1;
}

message GetChatsRequest {
  string userId = 1;
}

message ChatItem {
  string chatId = 1;
  string title = 2;
  string type = 3;
  repeated string participants = 4;
}

message GetChatsResponse {
  repeated ChatItem chats = 1;
}

message GetMessagesRequest {
  string chatId = 1;
}

message MessageItem {
  string id = 1;
  string fromUserId = 2;
  string body = 3;
  string createdAt = 4;
}

message GetMessagesResponse {
  repeated MessageItem messages = 1;
}
